--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -1,5 +1,5 @@
 
-<div class="cardWrap" [hidden]="!edited" id="download" #download >
+<div class="cardWrap"  id="download" #download >
   <div class="card cardLeft">
     <h1>Startup <span>Cinema</span></h1>
     <div class="title">
