--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,12 +15,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link"routerLink=''>Home </a>
+              <a class="nav-link"routerLink='' style="color: rgb(219, 217, 217, 0.7);">Home </a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link"routerLink='availablebuses'>About </a>
-              </li>
-               
+        
           </ul>
         </div>
     </nav>
