--- a/src/app/theatre-list/theatre-list.component.html
+++ b/src/app/theatre-list/theatre-list.component.html
@@ -1,10 +1,9 @@
 
 <form class="row row-cols-sm-auto">
-	<div class="col-12">
+	<div class="col-12" style="margin: 10px;">
 	  <div class="input-group">
-		<input class="form-control" placeholder="yyyy-mm-dd"
-			   name="dp" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker" (ngModelChange) = "change($event)" required>
-		<button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button" required></button>
+		<input type="date"  class="form-control" #input min="{{min}}" placeholder="yyyy-mm-dd"
+			   name="dp"   (change) = "change($event)" required>
 	  </div>
 	</div>
   </form>
